--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2023 Veille Technologique sur les HYIP</p>
-                        <p>Groupe B</p>
+            <p>© 2025 Veille Technologique sur les HYIP: Groupe B</p>
         </div>
     </div>
 </body>
